Modified tag and xml invaild characters

--- a/_posts/2020-09-24-courage.md
+++ b/_posts/2020-09-24-courage.md
@@ -2,7 +2,7 @@
 layout: post
 title:  勇气
 date:   2020-09-24 23:46:42 +0800
-categories: jekyll update
+categories: daily_writing
 ---
 ### 0.
 又睡不着了。你在寂寞的夜里翻了个身，试图将脸埋入温暖的被窝中，催眠自己。「现在还睡不着， 明天就要迟到了」，「天天都睡不着，真是太痛苦了」，「睡得少还影响工作质量，我要怎么才能入睡呢？」。夜晚昏昏沉沉，你既想睡去却不断听到梦魇的回音。
