--- a/_posts/2020-09-27-weekly1.md
+++ b/_posts/2020-09-27-weekly1.md
@@ -2,7 +2,7 @@
 layout: post
 title:  笨办法学习周报1W：写好一张卡片
 date:   2020-09-27 23:12:28 +0800
-categories: jekyll update
+categories: daily_writing
 ---
 
 ## 0. 回顾
