--- a/_posts/2020-12-03-50-words.md
+++ b/_posts/2020-12-03-50-words.md
@@ -2,7 +2,7 @@
 layout: post
 title:  每日50字汇集
 date:   2020-12-03 00:17:03 +0800
-categories: jekyll update
+categories: daily_writing
 ---
 ### 2020-11-11
 为什么行动比思考难？为什么很难做到知行合一？因为行动的过程远比你想象中复杂。行动时你需要同时留意三个层面：标准、监控和力量。你需要明确界定的标准，监控自己的行为也不逼自己太紧，抑制妨碍的目标的行为，尊重大脑发展的规律。
