--- a/_posts/2021-02-09-review-ia006bp.md
+++ b/_posts/2021-02-09-review-ia006bp.md
@@ -2,13 +2,13 @@
 layout: post
 title:  "『那些看起来很美好的城市新区』项目复盘"
 date:   2021-02-09 22:33:30 +0800
-categories: jekyll update
+categories: daily_writing
 ---
 ### 0. 引
 一年多前，我完成了『那些看起来很美好的城市新区』项目路演。这个项目的目的是为了找出重庆市有发展潜力的新区。当时的结果并不好，呈现的效果就像是重庆市的百度百科 + 摘抄学术论文。而我的演讲能力也没有特别好，本不出彩的路演显得更空洞乏味了。
 
 为什么现在才选择重新复盘这一老旧的项目呢？因为现在才有足够的智谋和勇气找出不足的地方了。
-
+
 ### 1. 回顾
 
 2019 年 10 月，信息分析六期正式开学。当时的我，怀揣着七上八下的心开始了新的信分之旅。一路勤勤恳恳地写，作业意外得好，吸引了不少小伙伴的留言和目光。甚至凭此让珠三角地区的队长 w 先森记住了我的名号，受宠若惊。正因如此，我对 BP 充满了期待。期待着自己也能像曾经敬仰的其他同侪一样，完成一份令外行艳羡的大作业。但同时也为自己的选题而迷茫。
