--- a/_posts/2021-02-11-share.md
+++ b/_posts/2021-02-11-share.md
@@ -2,9 +2,9 @@
 layout: post
 title:  "练笔：分享"
 date:   2021-02-11 23:55:30 +0800
-categories: jekyll update
+categories: daily_writing
 ---
-> 搬运之前在知识星球的练笔，以「分享」为主题，写一篇300字短文
+> 搬运我之前在知识星球的练笔，以「分享」为主题，写一篇300字短文
 
 ## 0.
 我曾是个偏执自大狂。
