--- a/_posts/2022-07-13-translate9.md
+++ b/_posts/2022-07-13-translate9.md
@@ -1,3 +1,9 @@
+---
+layout: post
+title:  明月何皎皎【翻译】"
+date:   022-07-13 23:58:34 +0800
+categories: daily_writing
+---
 # 明月何皎皎
 ## 	原文
 		明月何皎皎，照我罗床纬。
