--- a/_posts/2022-07-07-translate3.md
+++ b/_posts/2022-07-07-translate3.md
@@ -1,11 +1,10 @@
 ---
 layout: post
-title:  "涉江采芙蓉【翻译】"
+title:  "庭中有奇树【翻译】"
 date:   2022-07-07 23:15:55 +0800
 categories: daily_writing
 ---
 
-# 庭中有奇树
 ##	原文
 		庭中有奇树，绿叶发华滋。
 		攀条折其荣，将以遗所思。
