--- a/_posts/2022-07-31-anxiety.md
+++ b/_posts/2022-07-31-anxiety.md
@@ -7,38 +7,38 @@ categories: daily_writing
 
 ## 0.
 
-如果我望向雅典娜的眼睛，再华美的乐章都呜咽无声。
-如果飞鸟能振翅回旋，没有人能惋惜餐桌上的乳鸽。
-如果孩童能放声歌唱，大理石砌成的高墙无人奏乐。
-如果我流泪，就让流风回雪在春天流浪
-如果我大笑，就让海浪拍打在冬日暖阳
-唯有捧起四个半的绝句，孤独的心才能找到些许共鸣
-如同婴孩刚刚诞生，懵懂紧闭的脸上布满皱纹。
+如果我望向雅典娜的眼睛，再华美的乐章都呜咽无声。  
+如果飞鸟能振翅回旋，没有人能惋惜餐桌上的乳鸽。  
+如果孩童能放声歌唱，大理石砌成的高墙无人奏乐。  
+如果我流泪，就让流风飘雪在春天流浪    
+如果我大笑，就让海浪拍打在冬日暖阳  
+唯有捧起四个半的绝句，孤独的心才能找到些许共鸣  
+如同婴孩刚刚诞生，懵懂紧闭的脸上盘桓着皱纹。  
 
-我问母亲，何时才能归家
-何时能走出荒原
-母亲抓来一只低飞的蜻蜓
-当月亮从太阳的西边升上
-当沙漠从大海中间浮现
-我的宝贝
-那就是你的归属
+我问母亲，何时才能归家  
+何时能走出荒原  
+母亲抓来一只低飞的蜻蜓  
+当月亮从太阳的西边升上  
+当沙漠从大海中间浮现  
+我的宝贝  
+那就是你的归属  
 
 ## 1.
-精灵在森林漫游
-老虎睡在露珠上打呼
-窸窸窣窣的碎片间
-你提着刚抓到的落叶
-这里遍地都是蓝色的玛瑙
-琥珀色的雀仔
-紫色的蝉伏在棕色皮毛的树上
-而你幼小的手中
-提着的是一片新鲜落下的叶子
-比你脸大，比你肤色黄
-比你飘零，比你残破缺
-远处的山头飞过几只乌鸦
-你的眼睛倒映着清冷的月光
-今夜，你和落叶一同出发
-走向森林深处
+精灵在森林漫游  
+老虎睡在露珠上打呼  
+窸窸窣窣的碎片间  
+你提着刚抓到的落叶  
+这里遍地都是蓝色的玛瑙  
+琥珀色的雀仔  
+紫色的蝉伏在棕色皮毛的树上  
+而你幼小的手中  
+提着的是一片新鲜落下的叶子  
+比你脸大，比你肤色黄  
+比你飘零，比你残破缺  
+远处的山头飞过几只乌鸦  
+你的眼睛倒映着清冷的月光  
+今夜，你和落叶一同出发  
+走向森林深处  
 
 
 
